# NCPPLite

./: .gitignore  .project_name  CMakeLists.txt  README.md
cmake/NCPP/: ApplyGlobal.cmake  CheckDependencies.cmake  CheckDoxygenThemeDependency.cmake  CheckEADependencies.cmake  ConfigureCompiler.cmake  ConfigureDependencies.cmake  ConfigureEADependencies.cmake  DefaultAllocatorConfig.cmake  DocsUtils.cmake  EphemeralAllocatorConfig.cmake  GeneralAllocatorConfig.cmake  GitUtils.cmake  ObjectAllocatorConfig.cmake  PrerequisiteMacros.cmake  SIMDCompilerFlags.cmake  SetGlobal.cmake  TemplateTricks.cmake  VersionUtils.cmake
cmake/NCPP/Scripts/: GenerateLiteDistribution.cmake
cmake/NCPP/Utilities/: ApplyGlobal.cmake  DocsHelper.cmake  GitHelper.cmake  MacroHelper.cmake  SIMDCompilerFlags.cmake  VersionHelper.cmake
documentations/: Memory Management.md  Runtime-Type Information.md
documentations/styles/: ncpp.css
ncpp/: CMakeLists.txt
ncpp/resources/images/: background_wide.ai
ncpp/samples/: CMakeLists.txt
ncpp/samples/containers/: CMakeLists.txt
ncpp/samples/containers/concurrent_ring_buffer/: CMakeLists.txt
ncpp/samples/containers/concurrent_ring_buffer/source/: bootstrap.cpp
ncpp/samples/containers/hash_table/: CMakeLists.txt
ncpp/samples/containers/hash_table/source/: bootstrap.cpp
ncpp/samples/containers/ring_buffer/: CMakeLists.txt
ncpp/samples/containers/ring_buffer/source/: bootstrap.cpp
ncpp/samples/event/: CMakeLists.txt
ncpp/samples/event/source/: bootstrap.cpp
ncpp/samples/hello_ncpp/: CMakeLists.txt
ncpp/samples/hello_ncpp/source/: bootstrap.cpp
ncpp/samples/memory_management/: CMakeLists.txt
ncpp/samples/memory_management/basic_allocation/: CMakeLists.txt
ncpp/samples/memory_management/basic_allocation/source/: bootstrap.cpp
ncpp/samples/memory_management/chunk_based_allocators/: CMakeLists.txt
ncpp/samples/memory_management/chunk_based_allocators/source/: bootstrap.cpp
ncpp/samples/memory_management/dummy_allocator/: CMakeLists.txt
ncpp/samples/memory_management/dummy_allocator/source/: bootstrap.cpp
ncpp/samples/memory_management/garbage_collection/: CMakeLists.txt
ncpp/samples/memory_management/garbage_collection/source/: bootstrap.cpp
ncpp/samples/memory_management/reference_allocator/: CMakeLists.txt
ncpp/samples/memory_management/reference_allocator/source/: bootstrap.cpp
ncpp/samples/profiler/: CMakeLists.txt
ncpp/samples/profiler/scoped_profile/: CMakeLists.txt
ncpp/samples/profiler/scoped_profile/source/: bootstrap.cpp
ncpp/samples/rtti/: CMakeLists.txt
ncpp/source/ncpp/: .config  .cpp  .hpp  alloc_debug_info_log.hpp  colorized_log.hpp  declare_alloc_debug_info_operators.hpp  declare_eastl_container_operators.hpp  eastl_container_log.hpp  event.hpp  iostream.hpp  log.hpp  log_colors.hpp  logger.cpp  logger.hpp  object.hpp  ostream_input.hpp  prerequisites.hpp  profiler.hpp
ncpp/source/ncpp/containers/: .hpp  binding_helper.hpp  concurrent_ring_buffer.hpp  eastl_bindings.hpp  eastl_containers.hpp  eastl_views.hpp  hash_table.hpp  pack.hpp  ring_buffer.hpp  string_utilities.hpp  view.hpp
ncpp/source/ncpp/mem/: .cpp  .hpp  allocator.hpp  crt_allocator.hpp  default_allocator.hpp  dummy_allocator.cpp  dummy_allocator.hpp  ephemeral_allocator.hpp  general_allocator.hpp  incremental_chunk_allocator.hpp  memory_counting.cpp  memory_counting.hpp  object_allocator.hpp  reference_allocator.hpp
ncpp/source/ncpp/pac/: .hpp  mrsw_spin_lock.hpp  no_lock.hpp  spin_lock.hpp  spinlock.hpp  srmw_spin_lock.hpp  srsw_spin_lock.hpp  thread_index.cpp  thread_index.hpp
ncpp/source/ncpp/rtti/: .hpp  accessibility.hpp  rtti_flag.hpp  security_helper.hpp  subtype.hpp
ncpp/source/ncpp/utilities/: .hpp  alignof.hpp  basic_math.hpp  cpass.hpp  defer.hpp  first_template_arg.hpp  first_template_targ.hpp  first_template_varg.hpp  function_traits.hpp  is_derived_from.hpp  is_function.hpp  is_streamable.hpp  item_type.hpp  iterator.hpp  iterator_type.hpp  key_type.hpp  last_template_arg.hpp  last_template_targ.hpp  last_template_varg.hpp  magic.hpp  mem_wrap.hpp  member_offset.hpp  murmur_hash.hpp  no_constructor.hpp  no_deduct.hpp  node_type.hpp  nth_template_arg.hpp  nth_template_varg.hpp  safe_initializer_list.hpp  singleton.hpp  sizeof.hpp  smart_cast_member.hpp  template_arg_count.hpp  template_arg_list.hpp  template_targ_count.hpp  template_targ_list.hpp  template_targ_tree.hpp  template_varg_count.hpp  template_varg_list.hpp  try_class.hpp  (+3 more)
